// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Http Error Mapper should convert correctly for HttpErrorResponse with errors and causes 1`] = `
Object {
  "error": "The product could not be added to your basket. The maximum allowed item quantity is exceeded",
  "errorCode": undefined,
  "headers": Object {},
  "message": "Http failure response for (unknown url): 422 Unprocessable Entity",
  "name": "HttpErrorResponse",
  "status": 422,
  "statusText": "Unprocessable Entity",
}
`;

exports[`Http Error Mapper should convert correctly for simple HttpErrorResponse with error Message 1`] = `
Object {
  "error": "Error Message",
  "errorCode": undefined,
  "headers": Object {},
  "message": "Http failure response for (unknown url): 401 Unauthorized",
  "name": "HttpErrorResponse",
  "status": 401,
  "statusText": "Unauthorized",
}
`;
